index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  border-radius: 0.5rem;
}

html {
  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
  color: rgb(11, 6, 39);
  font-size: 1.2em;
}

header {
  display: flex;
  justify-content: space-between;
}

body {
  display: flex;
  flex-direction: column;
  height: 100vh;
}

main {
  display: flex;
  gap: 2ch;
  flex-grow: 1;
}

.brand {
  color: rgb(114, 6, 27);
  font-size: 3rem;
  background-color: silver;
  flex-grow: 1;
}

nav {
  display: flex;
  background-color: slategray;
  justify-content: space-around;
  font-size: 1.5rem;
  padding: 0.5rem;
  gap: 1ch;
}

li {
  display: flex;
  background-color: crimson;
  color: white;
  gap: 1ch;
  margin: 0.5em;
  padding: 0.5em;
}

.testimonial {
  background-color: burlywood;
}

footer {
  background-color: cyan;
  color: purple;
}

nav a {
  color: black;
  text-decoration: none;
  align-content: center;
  font-size: 1.4rem;
}

